2015-03-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Remove some leftovers.
	* src/search.c: Place some comments better and unwrap some lines.

2015-03-21  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_alt_speller): Restore the positions of the mark
	and the cursor in a better way: to the columns where they were.
	This fixes Savannah bug #44542, reported by Benno Schulenberg.

2015-03-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (finish_stdin_pager, cancel_stdin_pager, stdin_pager):
	Normalize the whitespace, remove an old comment, and place another
	one better.
	* src/text.c (do_undo): Make a message equal to another one.  It
	was mistakenly changed in r4950.  (This	is translation-neutral.)
	* src/global.c (shortcut_init): Keep related items together in the
	^G help screen.

2015-03-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Do not set the modified flag when
	an external spell checker didn't make any changes.  This fixes
	Savannah bug #44320, reported by Cody A. Taylor.

2015-03-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter): Fix a message plus a few comments.

2015-03-14  Mark Majeres  <mark@engine12.com>
	* src/nano.c (renumber): Get out if there is nothing to renumber,
	to prevent do_undo() from falling over trying to renumber emptiness.
	This fixes Savannah bug #44488, reported by Dennis Decker Jensen.

2015-03-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h, src/nano.c: Fix compilation with --enable-tiny plus
	--enable-nanorc.
	* src/rcfile.c (parse_binding): Fix the rebinding of toggles.
	* doc/man/{nano.1,rnano.1,nanorc.5}, doc/texinfo/nano.texi: Update
	years and version numbers in the docs in anticipation of a release.
	* src/nano.c (version): Drop compile time from version information
	to enable a reproducible build.  Proposed by Jérémy Bobbio and Jordi