@@ -1,3 +1,8 @@
+2015-03-22  Benno Schulenberg  <bensberg@justemail.net>
+	* src/chars.c (move_mbleft): Start looking for a multibyte char
+	not at the start of the string, but only as far back as such a
+	char can possibly be.  Change suggested by Mark Majeres.
+
 2015-03-21  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_alt_speller): Remove some leftovers.
 	* src/search.c: Place some comments better and unwrap some lines.
